Add Edit Username And Password Features